src/objects/Descripcion_del_Cliente_New__c.object
<CustomObject>
    <fields>
        <fullName>CSAT_Current_Year__c</fullName>
        <label>CSAT Current Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Last_Year__c</fullName>
        <label>CSAT Last Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Second_To_Last_Year__c</fullName>
        <label>CSAT Second To Last Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Unit__c</fullName>
        <label>CSAT Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cantidad_de_edificios__c</fullName>
        <label>Cantidad de Edificios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Descripciones del cliente</relationshipLabel>
        <relationshipName>Descripciones_del_cliente1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>El_n_mero_de_sucursales_crece_decrece__c</fullName>
        <label>Numero de sucursales crece decrece</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crece</fullName>
                </value>
                <value>
                    <fullName>Se mantiene</fullName>
                </value>
                <value>
                    <fullName>Decrece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parque_Automotor_Propio_o_Gestionado__c</fullName>
        <label>Parque Automotor Propio Gestionado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Propio</fullName>
                </value>
                <value>
                    <fullName>Gestionado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presupuesto_anual_que_maneja_tu_cliente__c</fullName>
        <label>Presupuesto Anual del Cliente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Strategic_Context_Last_Update__c</fullName>
        <label>Ultima Actualizacion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Strategic_Context__c</fullName>
        <label>Contexto Estrategico</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cantidad_de_empleados__c</fullName>
        <label>Cantidad de Empleados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cantidad_de_sucursales__c</fullName>
        <label>Cantidad de Sucursales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dispone_de_parque_automotor__c</fullName>
        <label>Dispone de Parque Automotor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>siguientes_pa_ses_tienen_negocio__c</fullName>
        <label>Que paises tienen negocio</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>España</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>veh_culos_dispone_el_parque__c</fullName>
        <label>Cuantos Vehiculos Dispone el Parque</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Descripcion del Cliente New</label>
    <nameField>
        <label>Nombre de Descripcion del Cliente 2</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Descripciones del cliente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>